lib/tests/fixtures/compiler/parser/break_in_resource_decl.baseline
Error: break_in_resource_decl.pp:3:26: break statement cannot be used inside a resource declaration expression.
  bar => if true { break }
                   ^~~~~
