lib/tests/fixtures/compiler/parser/break_in_resource_decl.pp
[].each |$x| {
    file { foo:
        bar => if true { break }
    }
}
